# team_naist_panasonic

./: .clang-format  .gitignore  .gitmodules  readme.md
tnp_end_effector/: CMakeLists.txt  package.xml  readme.md
tnp_end_effector/Dynamixel/: DualDxl_control_Serial.ino  SuctionNeck_Serial.ino  WasteGate_Serial.ino
tnp_end_effector/launch/: tnp_end_effector.launch
tnp_end_effector/src/: tnp_end_effector.cpp  tnp_end_effector.h  tnp_shutters.cpp  tnp_shutters.h
tnp_end_effector/srv/: .srv  Blower.srv  Drawer.srv  EEControl.srv  Gripper.srv  ItemSuctioned.srv  LinActuatorGripper.srv  OpenShutterCloseTheRest.srv  Suction.srv  SuctionRotation.srv
tnp_end_effector/test/: end_effector_api.test  end_effector_node.test  end_effector_utest.test
tnp_feat_vision/: CMakeLists.txt  package.xml
tnp_feat_vision/launch/: sr300_2_cameras.launch  sr300_r200_multiple.launch  tnp_cloud_match_r200.launch  tnp_cloud_match_sr300.launch  tnp_color_histogram.launch  tnp_image_viewer_r200.launch  tnp_image_viewer_sr300.launch  tnp_plane_matching_no_camera_launch.launch  tnp_plane_matching_r200.launch  tnp_plane_matching_rosbag.launch  tnp_plane_matching_sr300.launch
tnp_feat_vision/src/: BBoxExtractor.cpp  BBoxExtractor.h  BackgroundSubtraction.cpp  BackgroundSubtraction.h  EndEffectorQRDetector.cpp  EndEffectorQRDetector.h  RGBDFrame.cpp  RGBDFrame.h  UtilCvPclRs.cpp  UtilCvPclRs.h  black_background_removal.sh  helpers.cpp  helpers.h  testscript.sh  tnp_cloud_match.cpp  tnp_cloud_matching.cpp  tnp_cloud_matching.h  tnp_color_histogram.cpp  tnp_color_histogram.h  tnp_image_viewer.cpp  tnp_plane_matching.cpp  tnp_record_RgbdFrames.cpp  tnp_record_RgbdFrames.h
tnp_feat_vision/srv/: cloud_matching.srv  get_bounding_box.srv  identify_item.srv  remove_background.srv  set_items_info.srv  set_items_pics.srv  set_rs_background.srv
tnp_feat_vision/test/: feat_vision_api.test  feat_vision_node.test  feat_vision_utest.test
tnp_grasp_planner/: CMakeLists.txt  package.xml
tnp_grasp_planner/config/: occupancy_maps.rviz
tnp_grasp_planner/launch/: tnp_grasp_planner.launch
tnp_grasp_planner/src/: tnp_grasp_planner.cpp  tnp_grasp_planner.h
tnp_grasp_planner/srv/: getContainerOccupancy.srv  getGripCandidates_bb.srv  getGripCandidates_container.srv  getPoseToPlaceItem.srv  getSuctionCandidates_bb.srv  getSuctionCandidates_container.srv  getSuctionCandidates_container_fromOctomap.srv  savePCDFile.srv  updateOccupancyMap.srv
tnp_hand_eye_calib/: CMakeLists.txt  package.xml  readme.md
tnp_hand_eye_calib/action/: moveToCartPosePTP.action  moveToJointAnglesPTP.action
tnp_hand_eye_calib/launch/: check_calibration.launch  tracklive_automatic.launch
tnp_hand_eye_calib/models/: tnp_pattern.cao  tnp_pattern.cfg  tnp_pattern.wrl
tnp_hand_eye_calib/src/: calib_cartPose.cpp  tnp_kuka_cartPose_motion.cpp
tnp_hand_eye_calib/srv/: calibrateCamera.srv  checkCalibration.srv
tnp_image_taker/: CMakeLists.txt  package.xml  readme.md
tnp_image_taker/launch/: gather_images.launch
tnp_image_taker/src/: CameraRecord_3height.py  CameraRecord_led.py  CameraRecord_led_bin.py  CameraRecord_rgbd.py  CameraRecord_single.py  dataset-raw2moc.py  dataset_list.txt  gather_images.cpp  gather_images_random.cpp  gather_images_rectangle.cpp  image_fusion.py  kuka_single_object.py  kuka_talkerCar.py  kuka_talkerCar_bin.py
tnp_kuka_motion/: CMakeLists.txt  README.md  package.xml
tnp_kuka_motion/launch/: tnp_kuka_motion_ee_and_physical_robot.launch  tnp_kuka_motion_physical.launch  tnp_kuka_motion_with_TF_no_MoveIt.launch
tnp_kuka_motion/src/: tnp_kuka_cartPose_motion.cpp  tnp_kuka_motion.cpp  tnp_kuka_motion.h  tnp_kuka_motion_client.cpp  tnp_kuka_motion_helper_functions.h
tnp_kuka_motion/srv/: calibrationMotion.srv  canRobotPlaceItemHere.srv  goToBin.srv  goToContainer.srv  goToLookIntoAmnesty.srv  goToLookIntoBin.srv  goToLookIntoBox.srv  goToLookIntoContainer.srv  goToLookIntoTote.srv  goToRecSpace.srv  graspItem.srv  moveSuctionCupTo.srv  moveToGraspPose.srv  moveToJointAnglesPTP.srv  nudgeItemsIntoContainer.srv  putItemIntoAmnesty.srv  putItemIntoBin.srv  putItemIntoBox.srv  putItemIntoContainer.srv  suckItem.srv  sweepToteCorners.srv  sweepToteHorizontal.srv  wobbleForVision.srv
tnp_kuka_motion/test/: kuka_motion_api.test  kuka_motion_node.test  kuka_motion_utest.test
tnp_led_control/: CMakeLists.txt  README.md  package.xml
tnp_led_control/launch/: LED_controller.launch
tnp_led_control/src/: LED_server.py  LED_udp.py
tnp_led_control/srv/: LedControll.srv  get_led_intensity.srv  set_led_intensity.srv
tnp_monitor/: CMakeLists.txt  package.xml
tnp_monitor/launch/: tnp_monitor.launch
tnp_monitor/scripts/: tnp_viz_markers.py
tnp_monitor/src/: tnp_monitor.cpp  tnp_monitor.h
tnp_moveit_planner/: CMakeLists.txt  package.xml
tnp_moveit_planner/launch/: cartesian_move.launch  command_moveit.launch  iiwa_tool_read.launch  kinematics_trial.launch  one_move.launch  tnp_moveit_planner.launch
tnp_moveit_planner/src/: command_robot_moveit.cpp  one_move.cpp  tnp_cartesian_move.cpp  tnp_moveit_planner.cpp  tnp_moveit_planner.h  tnp_moveit_planner_noclass.cpp
tnp_moveit_planner/srv/: getFlangePoseAtEEPose.srv  isEEPoseReachable.srv  moveSuctionCupTo.srv  setMotionParams.srv
tnp_msgs/: CMakeLists.txt  package.xml
tnp_msgs/msg/: StateInfo.msg  TaskList.msg
tnp_msgs/srv/: ShowGraspPose.srv  ShowMarker.srv  (+1 more)
tnp_optoforce/: CMakeLists.txt  README.md  package.xml  setup.py
tnp_recognition_space/: CMakeLists.txt  deleteCacheScript.sh  infiniteNodelet_A.sh  infiniteNodelet_B.sh  loopCloudServiceCall.sh  manualExposure.sh  package.xml
tnp_recognition_space_calibration/: CMakeLists.txt  Calibration.cpp  GLRenderer.cpp  RGBDFrame.cpp  UtilCvPclRs.cpp  UtilCvPclRs.h  example  main.cpp
tnp_serial_com/: CMakeLists.txt  README.md  package.xml
tnp_simple_capture/: CMakeLists.txt  Readme.md  package.xml  rviz_config.rviz
tnp_simple_state_machine/: CMakeLists.txt  package.xml  readme.md
tnp_svm/: CMakeLists.txt  README.md  package.xml
tnp_task_manager/: CMakeLists.txt  package.xml  readme.md
(+404 files in other folders)
