<?xml version="1.0"?>
<package>
  <name>tnp_moveit_planner</name>
  <version>2017.7.31</version>
  <description>The tnp_moveit_planner package</description>

  <maintainer email="felix.von_drigalski.fp6@is.naist.jp">Felix von Drigalski</maintainer>

  <license>ALv2</license>

  <url type="website">http://robotics.naist.jp/team-naist-panasonic</url>
  
  <author email="felix.von_drigalski.fp6@is.naist.jp">Felix von Drigalski</author>
  <author email="kato.yusuke001@jp.panasonic.com">Yusuke Kato</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>iiwa_ros</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>iiwa_tnptool_description</run_depend>
  <run_depend>iiwa_tnptool_moveit</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>iiwa_ros</run_depend>
  
</package>