<?xml version="1.0"?>
<package>
  <name>tnp_optoforce</name>
  <version>0.0.1</version>
  <description>Based on the Optoforce repository by Toni Oliver (Shadow Robot)</description>
  <maintainer email="FvDrigalski@gmail.com">Felix v. Drigalski</maintainer>

  <license>GPL</license>

  <author>Toni Oliver, Felix von Drigalski</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>python-serial</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>rospy</run_depend>

</package>
